--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,8 +12,8 @@ micronaut:
 datasources:
   default:
     url: jdbc:mysql://localhost:3306/example
-    username: root
-    password: 1234
+    username: ${mysql_db_local_user}
+    password: ${mysql_db_local_password}
     driver-class-name: com.mysql.cj.jdbc.Driver
     db-type: mysql
 #jpa:
