--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.mockito.kotlin:mockito-kotlin:4.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     kapt("io.micronaut:micronaut-http-validation")
     kapt("io.micronaut.openapi:micronaut-openapi")
     implementation("io.micronaut:micronaut-http-client")
